[package]
name = "tema"
version = "0.1.0"
authors = ["liabri"]
edition = "2021"

[lib]
name = "tema"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.9.0"
serde_yaml = "0.8.21"
anyhow = "1.0.51"
shellexpand = "2.1.0"
log = "0.4.14"